2014-01-08  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSValueTransformer (+valueTransformerForName:): Fixed to 
	automatically register any available NSValueTransformer subclass that 
	matches  the given name and is not yet registered. This behavior is 
	described in the Cocoa API documentation.

2014-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUUID.m:
	* Source/Additions/NSData+GNUstepBase.m: 
	* Headers/GNUstepBase/NSData+GNUstepBase.h: 
	Move random data generation out to the NSData(GNUstepBase) category.

2014-01-07  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSJSONSerialization.m (writeObject()): Fixed double number 
	serialization to encode 17 significant digits (this matches the max
        number of significant digits in the double-precision floating point
        format). This prevents a loss of precision, in case the number has
        more than 3 digits after the decimal point.
	* Tests/base/NSJSONSerialization/json.m: Updated to test double number  
	serialization. 

2014-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: Make sure current queue is set for threads
	owned by a queue (and return the main queue for the main thread).
	Avoid needing to create the main queue in the main thread.

2014-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fixed logic error in David's libobjc2 integration
	for deallocation; should use object_getClass() if the object is NOT a
	small object, use isa otherwise.

2013-12-31  Marcus Mueller <znek@mulle-kybernetik.com>

	* Headers/Foundation/NSMetadata.h: use GS_PROTOCOLS_HAVE_OPTIONAL for
	NSMetadataQueryDelegate. Always define the protocol, even if it's empty
	(so we don't have to adjust any headers), but fallback to the informal
	protocol if OS version < 10.6 OR compiler doesn't support @optional
	keyword in protocols.

2013-12-30  Marcus Mueller <znek@mulle-kybernetik.com>

	* Headers/GNUstepBase/GSVersionMacros.h: added macros